# clipboard_project

./: README.md
project/: Dockerfile  README.md  fly.toml  manage.py  pyproject.toml  requirements.txt
project/clipboard/: admin.py  models.py  serializers.py  urls.py  views.py
project/clipboard/migrations/: 0001_initial.py  0002_alter_clipboard_text.py  0002_remove_clipboard_owner.py  0003_alter_clipboard_title.py  0004_alter_clipboard_id.py  0005_clipboard_uuid.py  0006_alter_clipboard_table.py  0007_alter_clipboard_options.py  0008_clipboard_order.py  0009_alter_clipboard_options.py  0010_alter_clipboard_uuid.py  0011_alter_clipboard_options.py
project/project/: middleware.py  settings.py  urls.py
